correcciones en el filtro de entidades de selecion de sensor de irradianncia correccion de visualiza de 2a opcion en el menu

--- a/custom_components/accurate_solar_forecast/translations/en.json
+++ b/custom_components/accurate_solar_forecast/translations/en.json
@@ -5,8 +5,9 @@
                 "title": "Solar Forecast Configuration",
                 "description": "Choose an action:",
                 "menu_options": {
-                    "add_string": "Add Production Sensor",
-                    "add_pv_model": "Add PV Panel Model"
+                    "add_pv_model": "Add PV Panel Model",
+                    "add_irradiance_sensor": "Add Irradiance Sensor",
+                    "add_string": "Add New String"
                 }
             },
             "add_pv_model": {
